build(ppm): added plume-combinator dependency

--- a/ppm.config
+++ b/ppm.config
@@ -3,3 +3,4 @@ main = main
 description = A simple project manager for Plume
 author = plume-lang
 version = 0.1.0
+dependencies = thomasvergne/plume-combinator
