build(config): added interpreter field in PPM config

--- a/ppm.config
+++ b/ppm.config
@@ -3,4 +3,5 @@ main = main
 description = A simple project manager for Plume
 author = plume-lang
 version = 0.1.0
+interpreter = js
 dependencies = thomasvergne/plume-combinator
